update header, add text to topic modeling section

--- a/lessons/04_topic_modeling.ipynb
+++ b/lessons/04_topic_modeling.ipynb
@@ -5,14 +5,8 @@
    "id": "a5aa27b3-30f9-4cd4-80e2-b9dd6460188a",
    "metadata": {},
    "source": [
-    "# Python Text Analysis: Topic Modeling"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3ece745f-2399-481f-9677-dc68ae158715",
-   "metadata": {},
-   "source": [
+    "# Python Text Analysis: Topic Modeling\n",
+    "\n",
     "We've considered so far how to create numerical representations of words. We've even performed sentiment classification with those numerical representations. How else can we leverage these numerical representations to elucidate structure from natural language?\n",
     "\n",
     "In this session, we're going to discuss *topic modeling*. In topic modeling, we aim to discover how the documents in a corpus may be modeled as a function of specific topics. This is not the same thing as direct clustering, though, in which we might directly assign each document to a particular cluster.\n",
@@ -27,7 +21,7 @@
    "id": "6fb1b9bf-6ed6-4abb-aab1-61d9fc209587",
    "metadata": {},
    "source": [
-    "# Dataset: 20 Newsgroups\n",
+    "## Dataset: 20 Newsgroups\n",
     "\n",
     "We will be using a new dataset called the **20 Newsgroups** dataset. You can find the original page for this dataset [here](http://qwone.com/~jason/20Newsgroups/).\n",
     "\n",
@@ -98,7 +92,7 @@
    "outputs": [],
    "source": [
     "# Always check the documentation!\n",
-    "data, labels = fetch_20newsgroups(\n",
+    "full_data, labels = fetch_20newsgroups(\n",
     "    subset='train',\n",
     "    shuffle=True,\n",
     "    random_state=1,\n",
@@ -121,11 +115,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(data[1000])\n",
-    "print('--------')\n",
-    "print(data[2000])\n",
-    "print('--------')\n",
-    "print(data[3000])"
+    "print(full_data[5])\n",
+    "print('\\n\\n--------\\n\\n')\n",
+    "print(full_data[50])\n",
+    "print('\\n\\n--------\\n\\n')\n",
+    "print(full_data[1000])"
    ]
   },
   {
@@ -191,17 +185,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c901796-78b1-41a0-bda4-83b2f76aa7f8",
+   "id": "67b7b0db-88c6-4be3-9b1e-16a1db8d0ad2",
    "metadata": {},
    "source": [
-    "# Non-negative Matrix Factorization"
+    "To simplify our analysis a little bit, we'll only use a portion of this dataset, which will be set by the `n_subsamples` variable. However, you can feel free to adjust this if you want to use a bigger portion of the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7bcdac2-6226-4659-a5a2-1b76a6dc130d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_subsamples = 2000\n",
+    "data = full_data[:n_subsamples]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d4870152-ec3e-4ca6-809f-1d6214e4d56c",
-   "metadata": {},
+   "id": "2c901796-78b1-41a0-bda4-83b2f76aa7f8",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
+    "## Non-negative Matrix Factorization\n",
+    "\n",
     "Non-negative matrix factorization (NMF) is a dimensionality reduction technique that can be used to perform topic modeling. It was first [introduced](https://www.nature.com/articles/44565) by Lee and Seung in 1999.\n",
     "\n",
     "What does *non-negative matrix factorization* mean? Non-negative implies we're not working with any negative numbers, and matrix factorization implies we're taking a matrix, and breaking it down into \"factors\".\n",
@@ -224,14 +234,8 @@
     "\n",
     "The breakdown of the original matrix into $W$ and $H$ can only be interpreted if there are no negative entries in any matrix. We already know a TF-IDF DTM is going to be non-negative. If we guarantee that $W$ and $H$ are as well, we can quite literally think of this factorization is creating building blocks for each document!\n",
     "\n",
-    "There's a small issue here: we can get the breakdown of documents into topics, but it's up to us to \"interpret\" what the topics might be. This can be tricky business, as we might see. Furthermore, we don't even know how many topics we should pick! There are procedures to identify a good number of topics, but at some level it is subjective."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "175eba48-0a62-4daf-95d4-b9168e4cca46",
-   "metadata": {},
-   "source": [
+    "There's a small issue here: we can get the breakdown of documents into topics, but it's up to us to \"interpret\" what the topics might be. This can be tricky business, as we might see. Furthermore, we don't even know how many topics we should pick! There are procedures to identify a good number of topics, but at some level it is subjective.\n",
+    "\n",
     "Let's try fitting an NMF to the newsgroups data. First, we need to use `TfidfVectorizer` to transform the data into a document term matrix (remember how to do this?)."
    ]
   },
@@ -387,23 +391,47 @@
    "outputs": [],
    "source": [
     "def plot_top_words(model, feature_names, n_top_words=10, n_row=2, n_col=5, normalize=False):\n",
+    "    \"\"\"Plots the top words from a topic model.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    model : topic model object (e.g., LatentDirichletAllocation, NMF)\n",
+    "        The trained topic model. It should have a components_ attribute.\n",
+    "    feature_names : array-like of strings\n",
+    "        The names of each token, as a list or array.\n",
+    "    n_top_words : int\n",
+    "        The number of words to plot for each topic.\n",
+    "    n_row : int\n",
+    "        The number of rows in the plot.\n",
+    "    n_col : int\n",
+    "        The number of columns in the plot.\n",
+    "    normalize : boolean\n",
+    "        If True, normalizes the components so that they sum to 1 along samples.\n",
+    "    \"\"\"\n",
+    "    # Create figure\n",
     "    fig, axes = plt.subplots(n_row, n_col, figsize=(3 * n_col, 5 * n_row), sharex=True)\n",
     "    axes = axes.flatten()\n",
     "    components = model.components_\n",
+    "    # Normalize components, if necessary\n",
     "    if normalize:\n",
     "        components = components / components.sum(axis=1)[:, np.newaxis]\n",
-    "\n",
+    "    # Iterate over each topic\n",
     "    for topic_idx, topic in enumerate(components):\n",
+    "        # Obtain the top words for each topic\n",
     "        top_features_ind = topic.argsort()[: -n_top_words - 1 : -1]\n",
+    "        # Get the token names\n",
     "        top_features = [feature_names[i] for i in top_features_ind]\n",
+    "        # Get their values\n",
     "        weights = topic[top_features_ind]\n",
     "\n",
+    "        # Plot the token weights as a bar plot\n",
     "        ax = axes[topic_idx]\n",
     "        ax.barh(top_features, weights, height=0.7)\n",
     "        ax.set_title(f\"Topic {topic_idx +1}\", fontdict={\"fontsize\": 20})\n",
     "        ax.invert_yaxis()\n",
     "        ax.tick_params(axis=\"both\", which=\"major\", labelsize=20)\n",
-    "\n",
+    "        \n",
+    "        # Customize plot\n",
     "        for i in \"top right left\".split():\n",
     "            ax.spines[i].set_visible(False)\n",
     "\n",
@@ -428,16 +456,10 @@
    "id": "cf55084e-a174-4356-a6dc-bac12b81f45c",
    "metadata": {},
    "source": [
-    "What can we tell from this? For one, Topic 3 looks very much like a topic related to religion; Topic 4 looks like it's about sports; Topic 7 looks like it might be related to computers. Note that, if you used a different random seed, these topics might look different for you.\n",
+    "What can we tell from this? For one, Topic 2 looks like it might be related to computers, Topic 3 looks very much like a topic related to religion, and Topic 8 looks like it's about sports. Note that, if you used a different random seed, these topics might look different for you.\n",
     "\n",
-    "Some of the topics look a little bit harder to interpret, and that comes with the territory in topic modeling."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8f51840b-147c-4946-8b1f-4709b74895e4",
-   "metadata": {},
-   "source": [
+    "Some of the topics look a little bit harder to interpret, and that comes with the territory in topic modeling.\n",
+    "\n",
     "We were able to get the $H$ matrix, but what about the $W$ matrix? To get this, we need to *transform* the DTM into the *basis* created by the NMF factorization. We can do this with the `transform` function:"
    ]
   },
@@ -526,11 +548,25 @@
    "id": "aafdde48-56c6-4550-ad7a-f6d100e95694",
    "metadata": {},
    "source": [
-    "## Challenge 1: Exploring Hyperparameters in NMF\n",
+    "---\n",
+    "\n",
+    "### Challenge 1: Exploring Hyperparameters in NMF\n",
     "\n",
     "The choice of 10 components was somewhat arbitrary. It was something we had to do before we could proceed with fitting the model to the data. This is what's known as a *hyperparameter*. There are other hyperparameters in the `NMF`. For example, the `alpha` values specifies to what degree we should force values to be set equal to zero.\n",
     "\n",
-    "Try fitting the NMF with other variations of hyperparameters, and plot the resulting topics using the `plot_top_words` function. What do you notice?"
+    "Try fitting the NMF with other variations of hyperparameters, and plot the resulting topics using the `plot_top_words` function. What do you notice?\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98fb9ea7-073d-4520-aafc-48044cba841d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -538,52 +574,28 @@
    "id": "5b4b4900-e5a5-4774-adff-7fd3f3146b9f",
    "metadata": {},
    "source": [
-    "# Latent Dirichlet Allocation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "41687845-9442-4e27-bf87-4361b49ffc2e",
-   "metadata": {},
-   "source": [
+    "## Latent Dirichlet Allocation\n",
+    "\n",
     "Latent Dirichlet Allocation (LDA) is a Bayesian model that captures how specific topics can generate documents. It was [introduced](https://jmlr.csail.mit.edu/papers/v3/blei03a.htmlhttps://jmlr.csail.mit.edu/papers/v3/blei03a.html) in machine learning by Blei et al. It is one of the oldest models applied to perform topic modeling.\n",
     "\n",
     "One significant difference between LDA and NMF is that LDA is a *generative* model. This means that it can be used to *generate* new documents, by sampling from it. Assume we have a number of topics $T$. Then, we generate a new document as follows:\n",
     "\n",
-    "1. Choose a number of words $N$ according to a Poisson distribution.\n",
+    "1. Choose a number of words $N$ according to a Poisson distribution. If you're not familiar with a Poisson distribution, don't worry - the only thing you need to know is that the outputs from a Poisson distribution can only be nonnegative integers (e.g., 0, 1, 2, 3 ...).\n",
     "2. Choose a vector of values $\\boldsymbol{\\theta}=(\\theta_1, \\theta_2, \\ldots, \\theta_T)$ from a Dirichlet distribution. The details of a Dirichlet distribution aren't too important other than that it guarantees all of the $\\theta_i$ add up to 1, and are positive. So, we can think of the $\\theta_i$ as proportions, or probabilities.\n",
     "3. For each of the $N$ words $w_n$:\n",
-    "- Choose a topic $t_n$ according to a Multinomial distribution following $\\boldsymbol{\\theta}$.\n",
+    "- Choose a topic $t_n$ according to a Multinomial distribution following $\\boldsymbol{\\theta}$. In other words, choose a topic according to the probabilities set by $\\boldsymbol{\\theta}$ (remember, we're thinking of these values as proportions, or probabilities).\n",
     "- Choose a word $w_n$ from a probability distribution $p(w_n|t_n)$ conditioned on $t_n$. This probability distribution is another Multinomial distribution.\n",
     "\n",
-    "LDA does not model the order of the words, so in the end, it produces a collection of words - just like the bag of words."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c661bd4f-f4bb-4276-ab2e-aac8622450ee",
-   "metadata": {},
-   "source": [
-    "![lda](../images/lda.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f18f3d82-7c66-4fd1-b3ee-2478adc10627",
-   "metadata": {},
-   "source": [
+    "LDA does not model the order of the words, so in the end, it produces a collection of words - just like the bag of words.\n",
+    "\n",
+    "![lda](../images/lda.png)\n",
+    "\n",
     "There's a lot of variables there, so let's consider a concrete example. Let's suppose we have two topics: soccer and basketball. These are $t_1$ and $t_2$. \n",
     "\n",
     "Some topics are more likely to contains words than others. For example, soccer is more likely to contain `liverpool` and `freekick`, but probably not `nba`. Basketball meanwhile will very likely contain `rebound` and `nba`. Furthermore, even though it's unlikely, a soccer topic might still refer to the `nba`. This unlikeliness is captured through the probabilities assigned in the distribution $p(w_n|t_n)$.\n",
     "\n",
-    "Next, each document might consist of multiple \"proportions\" of topics. We've already seen this in NMF, only this time, LDA captures this via a probability distribution rather than a matrix operation. So, Document 1 might mainly be about Soccer, and not really reference basketball - this would be reflected in the probabilities $\\boldsymbol{\\theta}=(0.9, 0.1)$. Meanwhile, another document might equally reference soccer and basketball, so we'd need a different set of parameters $\\boldsymbol{\\theta}=(0.5, 0.5)$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "25b01a71-66d7-4b06-a895-f258794c531d",
-   "metadata": {},
-   "source": [
+    "Next, each document might consist of multiple \"proportions\" of topics. We've already seen this in NMF, only this time, LDA captures this via a probability distribution rather than a matrix operation. So, Document 1 might mainly be about Soccer, and not really reference basketball - this would be reflected in the probabilities $\\boldsymbol{\\theta}=(0.9, 0.1)$. Meanwhile, another document might equally reference soccer and basketball, so we'd need a different set of parameters $\\boldsymbol{\\theta}=(0.5, 0.5)$.\n",
+    "\n",
     "Once again, we're going to use `scikit-learn` to perform LDA. This time, however, we'll use a `CountVectorizer`, since LDA explicitly models *counts*."
    ]
   },
@@ -697,9 +709,23 @@
    "id": "d404af01-7ee8-4125-a86e-3e9244f84046",
    "metadata": {},
    "source": [
-    "## Challenge 3: Exploring Hyperparameters in LDA\n",
+    "---\n",
     "\n",
-    "As in the case of NMF, try performing LDA with other variations of hyperparameters, and plot the resulting topics using the `plot_top_words` function. Use the [documentation](https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.LatentDirichletAllocation.html) as a guide to choose different hyperparameters."
+    "### Challenge 2: Exploring Hyperparameters in LDA\n",
+    "\n",
+    "As in the case of NMF, try performing LDA with other variations of hyperparameters, and plot the resulting topics using the `plot_top_words` function. Use the [documentation](https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.LatentDirichletAllocation.html) as a guide to choose different hyperparameters.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b3ce152-b9f3-4d4d-8d02-c3bbf6e6c6cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -707,26 +733,14 @@
    "id": "24e8eb97-027f-47db-a04a-4dea8d1b6ecc",
    "metadata": {},
    "source": [
-    "# Topic Modeling as Dimensionality Reduction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0cabd263-85c1-46d4-9beb-ab7095487487",
-   "metadata": {},
-   "source": [
+    "## Topic Modeling as Dimensionality Reduction\n",
+    "\n",
     "In both NMF and LDA, we broke down the documents into topics. This was, in effect, a *change in representation*. We went from a DTM representation, to a representation of *topics*. \n",
     "\n",
     "Because there are fewer topics than there are tokens, we can think of this as a *dimensionality reduction*. This is desirable for several reasons, the main one being that it's easier to interpret, say, 10 dimensions than it is to interpret 1000.\n",
     "\n",
-    "This is computationally true, as well: once we get to higher dimensions, it's harder to compare different vectors with each other, because they generally end up all close to orthogonal. This is known as the *curse of dimensionality*."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "29671450-9beb-4418-92cf-a6f146212a2b",
-   "metadata": {},
-   "source": [
+    "This is computationally true, as well: once we get to higher dimensions, it's harder to compare different vectors with each other, because they generally end up all close to orthogonal. This is known as the *curse of dimensionality*.\n",
+    "\n",
     "Let's first transform the counts into the topic representation:"
    ]
   },
@@ -764,7 +778,7 @@
    "id": "d62d3dde-1f72-45b9-a403-a45d25c5cf14",
    "metadata": {},
    "source": [
-    "Let's first calculate the similarity of the first two documents in the term representation:"
+    "Let's first calculate the similarity of the first few documents in the term representation:"
    ]
   },
   {
@@ -774,7 +788,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cosine_similarity(counts[:2])"
+    "cosine_similarity(counts[:4])"
    ]
   },
   {
@@ -792,7 +806,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cosine_similarity(topic_representation[:2])"
+    "cosine_similarity(topic_representation[:4])"
    ]
   },
   {
@@ -800,7 +814,7 @@
    "id": "320a8bb4-4075-4a9b-ac9b-ff0acbb0a0e3",
    "metadata": {},
    "source": [
-    "The similarity is higher, but not that higher. What about the rest of the documents?"
+    "There's a much bigger spread in the similarities, now. What about the rest of the documents?"
    ]
   },
   {
@@ -808,17 +822,31 @@
    "id": "abb994b3-d853-4660-b3bf-84af4f82e00f",
    "metadata": {},
    "source": [
-    "## Challenge 3: Finding Similar Documents\n",
+    "---\n",
     "\n",
-    "Calculate the cosine similarity between all pairs of documents, and find the two documents whose cosine similarity is the highest. What are these documents? Do they seem similar?"
+    "### Challenge 3: Finding Similar Documents\n",
+    "\n",
+    "Calculate the cosine similarity between all pairs of documents, and find the two documents whose cosine similarity is the highest. What are these documents? Do they seem similar?\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c05d254-1120-4ae8-b29a-77f6d4e81517",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# YOUR CODE HERE"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nlp",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "nlp"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -830,7 +858,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
