--- a/solutions/01_preprocessing_solutions.ipynb
+++ b/solutions/01_preprocessing_solutions.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "794bac7d-1acb-43a7-8e17-1c9fa6e007e1",
+   "metadata": {},
+   "source": [
+    "# Python Text Analysis: Fundamentals, Part 1 Solutions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "270c7730-8f60-4449-9920-6030b6dcd1b9",
