--- a/solutions/02_bag_of_words_solutions.ipynb
+++ b/solutions/02_bag_of_words_solutions.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a2c37c33-fd3c-4b3a-bbf5-661d29798421",
+   "metadata": {},
+   "source": [
+    "# Python Text Analysis: Fundamentals, Part 2 Solutions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4f340930-458d-4c63-939f-91ef765b8ef4",
