--- a/solutions/03_word_embeddings_solutions.ipynb
+++ b/solutions/03_word_embeddings_solutions.ipynb
@@ -5,7 +5,7 @@
    "id": "37f37149-c4d4-4bb2-be40-33caccccdc92",
    "metadata": {},
    "source": [
-    "# Python Text Analysis: Word Embeddings, Solutions"
+    "# Python Text Analysis: Word Embeddings Solutions"
    ]
   },
   {
